feat: new chaos pod watchers + refacto (#681)
The chaos pods watcher send notification if the chaos pod is failing.
New watcher architecture to facilitate the maintains and the creation of new watchers.

Jira: CHAOS-489

--- a/.local.mockery.yaml
+++ b/.local.mockery.yaml
@@ -65,4 +65,5 @@ packages:
   github.com/DataDog/chaos-controller/targetselector: {}
   github.com/DataDog/chaos-controller/types: {}
   github.com/DataDog/chaos-controller/utils: {}
+  github.com/DataDog/chaos-controller/watchers: {}
   github.com/DataDog/chaos-controller/webhook: {}
