--- a/chart/values/dev.yaml
+++ b/chart/values/dev.yaml
@@ -9,3 +9,8 @@ controller:
   resources: # resources assigned to the controller pod. may need to be increased when deploying to larger scale clusters
     cpu: 1
     memory: 1Gi
+
+injector:
+  labels:
+    # If Datadog agent is installed, Datadog admission controller will inject some env vars automatically
+    admission.datadoghq.com/enabled: "true"
