fix(cpu-pressure): skip expected errors (#730)
* feat(local): improve local run

* fix(network): track podResourceVersion

* refactor: client as field / remove useless perms

* fix(controller): use baseLog to avoid panic

* fix(informer): filter non chaos resources

* feat(datadog): install dd agent in local cluster

* chore: go 1.20.5

* fix(cpu-pressure): skip expected errors

--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -3,6 +3,7 @@
 # This product includes software developed at Datadog (https://www.datadoghq.com/).
 # Copyright 2023 Datadog, Inc.
 chaosNamespace: chaos-engineering # namespace where any resources get created.
+skipNamespace: false # omit namespace declaration
 
 global:
   oci:
@@ -15,6 +16,7 @@ global:
       pullSecrets: false # name of the secret object to use when pulling images
 
 controller:
+  version: ""
   image:
     repo: chaos-controller
   enabled: true # should the controller and associated webhooks be deployed or not
