--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -71,6 +71,7 @@ controller:
   resources: # resources assigned to the controller pod. may need to be increased when deploying to larger scale clusters
     cpu: 100m
     memory: 300Mi
+    ephemeralStorage: 1Gi
 
 injector:
   image:
