--- a/bin/manager/Dockerfile
+++ b/bin/manager/Dockerfile
@@ -1,11 +1,13 @@
+ARG BUILDGOVERSION
+FROM golang:${BUILDGOVERSION} as go
 FROM gcr.io/distroless/base-debian11:nonroot
 
 ARG TARGETARCH
 COPY manager_${TARGETARCH} /usr/local/bin/manager
 
 # COPY go runtime as it's needed by ddmark to dynamically load structs and their associated markers
-COPY --from=golang:1.20.5 /usr/local/go /usr/local/go/
-COPY --from=golang:1.20.5 /usr/local/go/bin /usr/local/bin/
+COPY --from=go /usr/local/go /usr/local/go/
+COPY --from=go /usr/local/go/bin /usr/local/bin/
 
 ENTRYPOINT ["/usr/local/bin/manager"]
 
