CHAOS-534: Re-resolve hosts while injected during network disruption (#710)
* Add watchHostChanges similar to watchServiceChanges in network_disruption.go, in order to continually update tc filters as resolved IPs for hosts change

* Add failing test

* review: use String() for tcfilters

* review: use logger with retry info

* expand unit tests

---------

Co-authored-by: Matthieu Bono <luphaz@users.noreply.github.com>

--- a/chart/templates/configmap.yaml
+++ b/chart/templates/configmap.yaml
@@ -80,6 +80,7 @@ data:
         kubeDns: {{ .Values.injector.dnsDisruption.kubeDns | quote }}
       {{- if .Values.injector.networkDisruption.allowedHosts }}
       networkDisruption:
+        hostResolveInterval: {{ .Values.injector.networkDisruption.hostResolveInterval | quote }}
         allowedHosts:
           {{- range $index, $allowedHost := .Values.injector.networkDisruption.allowedHosts }}
           {{ $v := printf "%s;%v;%s;%s" ($allowedHost.host | default "") ($allowedHost.port | default "") ($allowedHost.protocol | default "") ($allowedHost.flow | default "") -}}
