--- a/lima.yaml
+++ b/lima.yaml
@@ -6,7 +6,8 @@
 # use vz instead of qemu for rosetta support
 vmType: "vz"
 
-cpus: 6
+cpus: 8
+memory: 16GiB
 
 # enable rosetta for x86_64 arch compatibility
 rosetta:
