--- a/examples/node_failure_shutdown.yaml
+++ b/examples/node_failure_shutdown.yaml
@@ -13,7 +13,7 @@ metadata:
 spec:
   level: node # selector targets nodes instead of pods. Targeting a pod will impact the node hosting given pod.
   selector:
-    kubernetes.io/hostname: lima-default
+    node.kubernetes.io/instance-type: k3s
   count: 1
   nodeFailure:
     shutdown: true # shutdown the host (violently) instead of triggering a kernel panic so the host is kept down and not restarted
