--- a/chart/templates/role_injector.yaml
+++ b/chart/templates/role_injector.yaml
@@ -6,8 +6,9 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  creationTimestamp: null
   name: chaos-injector
+  labels:
+    app: chaos-controller
 rules:
   - apiGroups:
       - ""
