--- a/chart/templates/role_proxy.yaml
+++ b/chart/templates/role_proxy.yaml
@@ -7,6 +7,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: chaos-controller-proxy
+  labels:
+    app: chaos-controller
 rules:
   - apiGroups:
       - authentication.k8s.io
